# GIT_BOT

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  Makefile  README.md  docker-compose.yml  pyproject.toml
evals/: dataset.json  golden.json  known_good.patch  run_evals.py
scripts/: notion_data_source_id.py  recommend_models.py  seed_demo_workspace.py  seed_target_repo.py  verify_caching.py  verify_resume.py
src/: app.py  backfill.py  config.py  github_io.py  graph.py  ingestion.py  integrations.py  llm.py  sandbox.py  security.py  store.py  telegram_io.py
src/prompts/: arbitrator.md  blockers.md  breaker.md  extract_tasks.md  proposer.md  standup_digest.md  summarize.md
tests/: test_graph.py
