[project]
name = "slack-productivity-agent"
version = "0.1.0"
description = "Slack multi-agent: summarize threads, extract tasks, Jira/Notion sync with human approval"
requires-python = ">=3.12,<3.13"
dependencies = [
    "slack-bolt>=1.21",
    "aiohttp>=3.10",                      # Bolt async socket mode
    "litellm>=1.60",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "apscheduler>=3.11",
    "httpx>=0.28",                        # Jira/Notion REST calls
    "psycopg[binary]>=3.2",               # checkpointer needs sync psycopg
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
