[project]
name = "code-review-swarm"
version = "0.1.0"
description = "Adversarial code-review swarm: Proposer writes a patch, Breaker attacks it, Arbitrator judges, human approves via Telegram"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "litellm>=1.60",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "httpx>=0.28",                        # GitHub REST + Telegram Bot API
    "psycopg[binary]>=3.2",               # checkpointer needs sync psycopg
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]  # keep the seeded demo repo's intentionally-failing tests out
